fix(gui): improve device ID readability in dark theme (fixes #9757)
Remove the foreground color override from the "well" class, to make it
inherit the base text color, which is brighter and better matches the
grey background.

Switch to a bold font for even better readability.  This also affects
the GUI API key in the settings dialog.

--- a/gui/dark/assets/css/theme.css
+++ b/gui/dark/assets/css/theme.css
@@ -228,7 +228,6 @@ code.ng-binding{
 }
 
 .well, .form-control[readonly="readonly"], .popover { /* read-only fields*/
-    color: #666 !important;
     border-color: #424242 !important;
     background-color: #3B3B3B !important;
 }
