--- a/gui/default/assets/css/overrides.css
+++ b/gui/default/assets/css/overrides.css
@@ -58,6 +58,7 @@ ul+h5 {
 
 .text-monospace {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    font-weight: bold;
 }
 
 .table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td {
